# identifiers

./: .gitignore  CMakeLists.txt
include/: identifier.h  identifier_group.h
include/exceptions/: end_of_sequence_exception.h  identifier_exception.h  invalid_identifier_exception.h
src/: CMakeLists.txt  identifier.cpp  identifier_group.cpp
test/: CMakeLists.txt  add_new_identifier_group_test.cpp  base.h  digit_identifier_test.cpp  digit_single_identifier_group_test.cpp  identifier_entry_test.cpp  invalid_digit_test.cpp  invalid_length_identifier_group_test.cpp  invalid_length_identifier_test.cpp  invalid_letter_identifier_test.cpp  invalid_number_identifier_group_test.cpp  letter_identifier_test.cpp  letter_single_identifier_group_test.cpp  max_identifier_group_count_test.cpp
